Ultimately, need to set this in a single location once I factor the
code into a package.

*****

Modified bm.edit() to take the text editor from the config file.
Still, need to figure out how to deal with windows platform.

*****

Fixed bug in cm.set() to accept 'default' for text_editor.

*****

Modified lm.latex() and latex CLI to get default paper format from
the config file.

*****

Implemented config command-line interface and documentation.

*****

Bumped bibmanager version to 0.3.2.
This next merge closes #15


*****  Mon Dec 31 22:12:36 CLT 2018  *****

Moved Bib()'s get_authors() method into bm.get_author() function,
to make it accessible to others without needing to make a Bib()
object.  Pointed get_author() method to the get_author() function.

*****

Created ads_manager.py file to handle ADS related requests.
Implemented am.search() function to make querries into ADS.


*****  Tue Jan  1 08:50:45 CLT 2019  *****

Modified adstoken config parameter to ads_token.
ADS functions are pending (broken at this point).

*****

Added utils.py file to keep low-level utility functions and constants
Adjusted latex_manager.py, __main__.py, and bib_manager.py
(but still need to move many functions from bm into utils).

*****

Moved low-level functions from bib_manager.py into utils.py

*****

Moved bm.get_authors() function to utils (and added docstrings).
Added BM_CACHE to utils.

*****

Implemented am.display() to show a sub-set of entries on the prompt.
Renamed rows to cache_rows in am.search() to distinguish from
ads_diplay rows.

*****

Implemented am.manager() function defining protocol for ADS searches:
- search new querries or cache continuation
- load, save, and delete cache
- display entries
Fixed typo in indices for am.display() print statement.

*****

Added ads_diplay to the bibmanager config keys.
Tweaked config_manager.py code to user more f-strings.

*****

Implemented ads-search command-line interface and documentation.

*****
